--- a/ui/mainwindow.ui
+++ b/ui/mainwindow.ui
@@ -6,18 +6,18 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>400</width>
-    <height>400</height>
+    <width>600</width>
+    <height>600</height>
    </rect>
   </property>
   <property name="windowTitle">
-   <string>MainWindow</string>
+   <string>Tic-Tac-Toe</string>
   </property>
   <widget class="GameWidget" name="game_widget">
    <property name="minimumSize">
     <size>
-     <width>300</width>
-     <height>300</height>
+     <width>600</width>
+     <height>600</height>
     </size>
    </property>
   </widget>
@@ -26,7 +26,7 @@
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>400</width>
+     <width>600</width>
      <height>22</height>
     </rect>
    </property>
